# etf-kpis-scraper

./: .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  docker_entrypoint.sh  main.py  pyproject.toml  requirements.txt
.github/workflows/: ecr_deployment.yml  lambda_deployment.yml
cloudformation_templates/: lambda_eventbridge.yaml  monitoring.yaml  stack_parameters.json
lambda/: lambda_function.py  package_and_zip.sh  requirements.txt
scripts/: test_eventbridge_rule.py  upload_env_to_s3.sh
src/: api.py  utils.py
terraform/ecs_fargate/: backend.hcl  data.tf  ecs_fargate.tf  locals.tf  main.tf  variables.tf  variables.tfvars.example
terraform/iam/: backend.hcl  data.tf  iam.tf  locals.tf  main.tf  variables.tf  variables.tfvars.example
terraform/lambda_eventbridge/: backend.hcl  data.tf  lambda_eventbridge.tf  locals.tf  main.tf  variables.tf  variables.tfvars.example
terraform/monitoring/: .terraform.lock.hcl  backend.hcl  chatbot.tf  cloudwatch.tf  data.tf  locals.tf  main.tf  monitoring.tf  outputs.tf  sns.tf  variables.tf  variables.tfvars.example  variables.tfvars.examples
terraform/s3_ecr/: backend.hcl  ecr.tf  locals.tf  s3.tf  variables.tf  variables.tfvars.example
terraform/vpc_private/: backend.hcl  locals.tf  variables.tf  variables.tfvars.example  vpc.tf
terraform/vpc_public/: backend.hcl  locals.tf  variables.tf  variables.tfvars.example  vpc.tf
