[project]
name = "etf-kpis-scraper"
description = "ETF data scraper leveraging AWS, Yahoo Finance, and Alpha Vantage APIs"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "yfinance (>=0.2.51)",
    "pandas (>=2.2.3)",
    "requests (>=2.32.3)",
    "requests-cache (>=1.2.1)",
    "pyrate-limiter (>=2.10.0) ; python_version >= '3.12' and python_version < '4.0'",
    "requests-ratelimiter (>=0.7.0) ; python_version >= '3.12' and python_version < '4.0'",
    "awswrangler (>=3.10.1) ; python_version >= '3.12' and python_version < '4.0'",
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
package-mode = false

[tool.poetry.group.dev.dependencies]
ipykernel = ">=6.29.5"
boto3 = ">=1.35.92"
boto3-stubs = {version = ">=1.35.92", extras = ["cloudformation", "ecs"]}

[tool.poetry.group.lint-fmt.dependencies]
mypy = ">=1.14.1"
ruff = ">=0.8.6"

[tool.mypy]
python_version = "3.12"
ignore_missing_imports = true
disable_error_code = ["import-untyped"]

[[tool.mypy.overrides]]
module = "lambda.lambda_function"
disable_error_code = [
    "arg-type",
    "misc",
    "typeddict-item",
    "list-item"
]

[[tool.mypy.overrides]]
module = "src.deploy_stack"
disable_error_code = [
    "arg-type",
    "return-value"
]

[tool.ruff]
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".ipynb_checkpoints",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pyenv",
    ".pytest_cache",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    ".vscode",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "site-packages",
    "venv",
]
line-length = 88
indent-width = 4
target-version = "py312"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"

[tool.ruff.lint]
select = ["I", "F401"]
