[project]
name = "etf-kpis-scraper"
description = "ETF kpis scraper leveraging AWS, Yahoo Finance, and Alpha Vantage APIs"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "yfinance (>=0.2.61)",
    "pandas (>=2.2.3)",
    "awswrangler (>=3.11.0) ; python_version >= '3.12' and python_version < '4.0'",
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
package-mode = false

[tool.poetry.group.dev.dependencies]
ipykernel = ">=6.29.5"
boto3 = ">=1.35.97"
boto3-stubs = {version = ">=1.35.97", extras = ["cloudformation", "ecs"]}
pydantic = ">=2.10.5"
pydantic-settings = ">=2.7.1"

[tool.poetry.group.lint-fmt.dependencies]
mypy = ">=1.14.1"
ruff = ">=0.8.6"
pre-commit = ">=4.2.0"

[tool.poetry.requires-plugins]
poetry-plugin-export = ">=1.9"

[tool.mypy]
python_version = "3.12"
ignore_missing_imports = true
disable_error_code = ["import-untyped"]

[tool.ruff]
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".ipynb_checkpoints",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pyenv",
    ".pytest_cache",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    ".vscode",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "site-packages",
    "venv",
]
line-length = 88
indent-width = 4
target-version = "py312"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"

[tool.ruff.lint]
select = ["I", "F401"]
