[project]
name = "etf-kpis-scraper"
description = "ETF kpis scraper leveraging AWS, Yahoo Finance, and Alpha Vantage APIs"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "yfinance (>=0.2.65)",
    "pandas (>=2.2.3)",
    "awswrangler (>=3.11.0) ; python_version >= '3.12' and python_version < '4.0'",
    "requests (>=2.32.4)",
]

[dependency-groups]
notebook = [
    "ipykernel (>=6.29.5)"
]
lambda = [
    "boto3 (>=1.35.97)",
    "boto3-stubs[cloudformation, ecs] (>=1.35.97)",
    "pydantic (>=2.10.5)",
]
lint-fmt = [
    "mypy (>=1.14.1)",
    "ruff (>=0.8.6)",
    "pre-commit (>=4.2.0)"
]

[tool.poetry]
package-mode = false

[tool.poetry.requires-plugins]
poetry-plugin-export = ">=1.9"

[tool.mypy]
python_version = "3.12"
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
disallow_untyped_calls = true
explicit_package_bases = true
ignore_missing_imports = true
disable_error_code = ["import-untyped"]

[tool.ruff]
extend-exclude = [
    ".ipynb_checkpoints",
    ".pyenv",
    ".pytest_cache",
    ".vscode",
    "build",
    "site-packages",
]
force-exclude = true
line-length = 88
indent-width = 4
target-version = "py312"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"

[tool.ruff.lint]
select = ["I", "F401"]
